--- a/styles/sections.css
+++ b/styles/sections.css
@@ -17,7 +17,7 @@ section header {
   }
 }
 #featured {
-
+  grid-area: featured;
   img {
     height: 100%;
     object-fit: cover;
@@ -50,7 +50,7 @@ section header {
 }
 
 #weekly {
-
+  grid-area: weekly;
   &>div {
     grid-template-columns: repeat(4, 292px);
   }
@@ -68,5 +68,31 @@ section header {
       margin-top: 9px;
       font-weight: 800;
     }
+  }
+}
+#ai {
+  grid-area: ai;
+  img {
+    width: 176px;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+  }
+  h3 {
+    margin-block: 8px 4px;
+  }
+}
+aside {
+  grid-area: aside;
+}
+
+#more {
+  margin-top: 32px;
+  h3 {
+    margin-top: 8px;
+  }
+  img {
+    width: 72px;
+    aspect-ratio: 1/1;
+    object-fit: cover;
   }
 }
